# LinuxApplicationDevelopment2023

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
04_Debugging/: Makefile  range.c
04_Debugging/test/: test.sh
04_Debugging/test/gdb/: test_range_-100_100_3.gdb  test_range_1_12.gdb
08_I18n/: CMakeLists.txt  guesser.c
08_I18n/po/: en.po  ru.po
09_PatchDiff/: .clang-format  Makefile  lbrnt.c
09_PatchDiff/patch/: size.patch  stable_random_walls_size.patch  walls_size.patch
11_Documenting/: CMakeLists.txt  Doxyfile.in  guesser.c
11_Documenting/include/: roman.h  strbuf.h
11_Documenting/lib/: roman.c  strbuf.c
11_Documenting/po/: en.po  ru.po
